--- a/public/index.html
+++ b/public/index.html
@@ -131,6 +131,7 @@
                   >
                 </div>
                 <input
+                  autocomplete="off"
                   id="text-taskTitle"
                   type="text"
                   class="form-control"
@@ -146,6 +147,7 @@
                   >
                 </div>
                 <textarea
+                  autocomplete="off"
                   id="text-taskDescription"
                   type="text"
                   class="form-control"
@@ -164,7 +166,7 @@
             <div class="col"></div>
             <div class="card col-6 mx-auto" id="insert-tasks">
               <!-- Template-->
-              
+
               <!--End Template-->
             </div>
             <div class="col-sm"></div>
